2011-05-27  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: improve `ccnoco*.test', better cross-compiling support
	* tests/ccnoco3.test (Mycomp): Use the `$CC' chosen by `tests/defs'
	instead of forcing `gcc' unconditionally.  This ensures better
	coverage in case of cross-compiling, when GCC can be named e.g.,
	`i586-mingw32msvc-gcc', instead of simply `gcc'.
	* tests/ccnoco.test: Likewise.  Remove redundant checks.  Modernize
	the created `configure.in'.  Run tests both in-tree and in VPATH.
	Export `CC' to the overridden value only once.
	* tests/ccnoco2.test: Slightly stricter grepping of automake
	stderr.  Add trailing `:' command.

2011-05-27  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: each test case depends on `defs-static'
	* tests/Makefile.am ($(TEST_LOGS)): Depends on `defs-static' too.
	Simplify comments.

2011-05-27  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: use $SHELL to run tests which are shell scripts
	* tests/Makefile.am (TEST_LOG_COMPILER): Define so that the
	configure-time $SHELL is used to run the tests.
	* tests/defs: Add code to re-execute by default the running
	test script with configure-time $SHELL.  Updated comments.
	* configure.ac: Check that `set -e' is working for $SHELL,
	not for /bin/sh.
	* tests/defs-static.in: Update comments.
	* tests/README (Supported shells): Updated.
	(Getting details from failures): Don't tell that tests are
	run by /bin/sh by default.

2011-05-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: split 'subst2.test' to improve modularity and coverage
	* tests/subst2.test: Test removed, split into ...
	* tests/programs-primary-rewritten.test: ... this test ...
	* tests/subst-no-trailing-empty-line.test: ... and this one ...
	* tests/extra-programs-empty.test: ... and this one.
	* tests/Makefile.am (TESTS): Update.

2011-05-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: tweak and improve tests on Automake conditionals