@@ -22,8 +22,7 @@
 # sister test `silent-many-gcc.test', which requires the GNU compilers
 # and forces the use of gcc depmode.
 
-# FIXME: generic Fortran compilers should suffice here
-required='cc c++ gfortran flex yacc'
+required='cc c++ fortran fortran77 flex yacc'
 . ./defs || Exit 1
 
 # Avoids too much code duplication.
