@@ -17,7 +17,7 @@
 # Check silent-rules mode for Fortran 77.
 # Keep this ins sync with the sister test silentf90.test.
 
-required='gfortran' # FIXME: any working Fortran compiler should be OK!
+required=fortran77
 . ./defs || Exit 1
 
 mkdir sub
