@@ -17,7 +17,7 @@
 # Check silent-rules mode for Fortran 90.
 # Keep this ins sync with the sister test silentf77.test.
 
-required='gfortran' # FIXME: any working Fortran compiler should be OK!
+required=fortran
 . ./defs || Exit 1
 
 mkdir sub
