@@ -1,3 +1,13 @@
+2011-05-29  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: don't require gfortran if any fortran compiler is enough
+	* tests/silentf90.test ($required): Require `fortran', not
+	`gfortran'.
+	* tests/silentf77.test ($required): Require `fortran77', not
+	`gfortran'.
+	* tests/silent-many-generic.test ($required): Require `fortran'
+	and `fortran77' rather than `gfortran'.
+
 2011-05-27  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: improve `ccnoco*.test', better cross-compiling support
